--- a/_includes/resource-list.html
+++ b/_includes/resource-list.html
@@ -19,7 +19,7 @@
   size=include.size
   heading=resource.title
   image=resource.image
-  link=resource.link
+  link=resource.url
   row1=resource.description
   row2=tags
 -%}
