--- a/_includes/role.html
+++ b/_includes/role.html
@@ -1,7 +1,7 @@
 {%- assign icon = "fas fa-user" -%}
 {%- assign text = "Default Role" -%}
 
-{%- if include.type == "pi" -%}
+{%- if include.type == "principal-investigator" -%}
 {%- assign icon = "fas fa-microscope" -%}
 {%- assign text = "Principal Investigator" -%}
 {%- endif -%}
