--- a/css/portrait.scss
+++ b/css/portrait.scss
@@ -10,6 +10,7 @@
   flex-direction: column;
   width: 150px;
   margin: 20px;
+  text-align: center;
   text-decoration: none;
 
   .portrait_image {
