--- a/css/portrait.scss
+++ b/css/portrait.scss
@@ -73,3 +73,11 @@
     }
   }
 }
+
+.team-members {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2.5rem;
+  margin-top: 2rem;
+}
