--- a/_includes/team-list.html
+++ b/_includes/team-list.html
@@ -30,13 +30,16 @@
 {% assign members = members | where_exp: "member", "member.group == group" %}
 {% endif %}
 
-{% for member in members %}
-{%-
-  include portrait.html
-  name=member.title
-  link=member.url
-  image=member.image
-  role=member.role
-  mini=include.mini
--%}
-{% endfor %}
+<div class="team-members">
+ {% for member in members %}
+ {%-
+   include portrait.html
+   name=member.title
+   link=member.url
+   image=member.image
+   role=member.role
+   mini=include.mini
+ -%}
+ {% endfor %}
+</div>
+
